--- a/mixxx/src/dlgtrackinfo.ui
+++ b/mixxx/src/dlgtrackinfo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>378</width>
-    <height>483</height>
+    <width>453</width>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,7 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>150</height>
+       <height>400</height>
       </size>
      </property>
      <property name="frameShape">
@@ -46,15 +46,15 @@
       <enum>QFrame::Plain</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="pgTrack">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>360</width>
-        <height>351</height>
+        <width>435</width>
+        <height>350</height>
        </rect>
       </property>
       <attribute name="label">
@@ -82,13 +82,50 @@
         <widget class="QLineEdit" name="txtArtist"/>
        </item>
        <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Album:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" colspan="3">
+        <widget class="QLineEdit" name="txtAlbum"/>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>Date:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1" colspan="3">
+        <widget class="QLineEdit" name="txtYear"/>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Track #:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Genre:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" colspan="3">
+        <widget class="QLineEdit" name="txtGenre"/>
+       </item>
+       <item row="6" column="0">
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>Filename:</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1" colspan="3">
+       <item row="6" column="1" colspan="3">
         <widget class="QLineEdit" name="txtFilepath">
          <property name="enabled">
           <bool>true</bool>
@@ -98,43 +135,142 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Play Time:</string>
+          <string>Duration:</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="8" column="1">
         <widget class="QLabel" name="txtDuration">
          <property name="text">
           <string>3:00</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="2">
+       <item row="8" column="2">
         <widget class="QLabel" name="Type">
          <property name="text">
           <string>File Type:</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="3">
+       <item row="8" column="3">
         <widget class="QLabel" name="txtType">
          <property name="text">
           <string>77</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="9" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Comments:</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1" colspan="3">
+       <item row="9" column="1" colspan="3">
         <widget class="QTextEdit" name="txtComment"/>
+       </item>
+       <item row="4" column="1" colspan="3">
+        <widget class="QLineEdit" name="txtTrackNumber"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="pgBpm">
+      <attribute name="label">
+       <string>Track BPM</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QLabel" name="labelBpm">
+               <property name="text">
+                <string>Track BPM: </string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QDoubleSpinBox" name="spinBpm">
+               <property name="decimals">
+                <number>8</number>
+               </property>
+               <property name="maximum">
+                <double>500.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>1.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+              <widget class="QPushButton" name="bpmDouble">
+               <property name="text">
+                <string>x2</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="bpmHalve">
+               <property name="text">
+                <string>/2</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QPushButton" name="bpmTap">
+           <property name="minimumSize">
+            <size>
+             <width>121</width>
+             <height>91</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>123</width>
+             <height>91</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Tap to Beat</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Hint: Use the Library Analyze view to run BPM detection.</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>0</width>
+           <height>200</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -146,8 +282,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>360</width>
-        <height>351</height>
+        <width>448</width>
+        <height>340</height>
        </rect>
       </property>
       <attribute name="label">
