--- a/mixxx/src/dlgprefsounddlg.ui
+++ b/mixxx/src/dlgprefsounddlg.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>DlgPrefSoundDlg</class>
- <widget class="QWidget" name="DlgPrefSoundDlg" >
-  <property name="geometry" >
+ <widget class="QWidget" name="DlgPrefSoundDlg">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,164 +10,164 @@
     <height>490</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form1</string>
   </property>
-  <layout class="QVBoxLayout" >
+  <layout class="QVBoxLayout">
    <item>
-    <widget class="QGroupBox" name="audioGroupBox" >
-     <property name="title" >
+    <widget class="QGroupBox" name="audioGroupBox">
+     <property name="title">
       <string>Audio Output</string>
      </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="0" >
-       <widget class="QLabel" name="TextLabel1" >
-        <property name="enabled" >
+     <layout class="QGridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="TextLabel1">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>140</width>
           <height>0</height>
          </size>
         </property>
-        <property name="maximumSize" >
+        <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>Master</string>
         </property>
-        <property name="wordWrap" >
+        <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-       <widget class="QComboBox" name="ComboBoxSoundcardMaster" >
-        <property name="enabled" >
+      <item row="0" column="1">
+       <widget class="QComboBox" name="ComboBoxSoundcardMaster">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>210</width>
           <height>0</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
          <string>Headphones</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" >
-       <widget class="QComboBox" name="ComboBoxSoundcardHeadphones" />
+      <item row="1" column="1">
+       <widget class="QComboBox" name="ComboBoxSoundcardHeadphones"/>
       </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="TextLabel2" >
-        <property name="enabled" >
+      <item row="2" column="0">
+       <widget class="QLabel" name="TextLabel2">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>140</width>
           <height>0</height>
          </size>
         </property>
-        <property name="maximumSize" >
+        <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>Sample rate (Hz)</string>
         </property>
-        <property name="wordWrap" >
+        <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="2" column="1" >
-       <widget class="QComboBox" name="ComboBoxSamplerates" >
-        <property name="enabled" >
+      <item row="2" column="1">
+       <widget class="QComboBox" name="ComboBoxSamplerates">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>120</width>
           <height>0</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="TextLabel3_2" >
-        <property name="enabled" >
+      <item row="3" column="0">
+       <widget class="QLabel" name="TextLabel3_2">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>140</width>
           <height>0</height>
          </size>
         </property>
-        <property name="maximumSize" >
+        <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>Sound API</string>
         </property>
-        <property name="wordWrap" >
+        <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" >
-       <widget class="QComboBox" name="ComboBoxSoundApi" >
-        <property name="enabled" >
+      <item row="3" column="1">
+       <widget class="QComboBox" name="ComboBoxSoundApi">
+        <property name="enabled">
          <bool>true</bool>
         </property>
-        <property name="minimumSize" >
+        <property name="minimumSize">
          <size>
           <width>120</width>
           <height>0</height>
          </size>
         </property>
-        <property name="font" >
+        <property name="font">
          <font/>
         </property>
        </widget>
       </item>
-      <item row="3" column="2" >
+      <item row="3" column="2">
        <spacer>
-        <property name="orientation" >
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>81</width>
           <height>26</height>
@@ -174,18 +175,18 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="2" >
-       <widget class="QComboBox" name="ComboBoxChannelMaster" />
+      <item row="0" column="2">
+       <widget class="QComboBox" name="ComboBoxChannelMaster"/>
       </item>
-      <item row="1" column="2" >
-       <widget class="QComboBox" name="ComboBoxChannelHeadphones" />
+      <item row="1" column="2">
+       <widget class="QComboBox" name="ComboBoxChannelHeadphones"/>
       </item>
-      <item row="2" column="2" >
+      <item row="2" column="2">
        <spacer>
-        <property name="orientation" >
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
@@ -197,75 +198,27 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="stretchGroupBox" >
-     <property name="title" >
-      <string>Pitch behaviour</string>
-     </property>
-     <layout class="QVBoxLayout" >
-      <item>
-       <layout class="QHBoxLayout" >
-        <item>
-         <layout class="QVBoxLayout" >
-          <item>
-           <widget class="QRadioButton" name="radioButtonVinylEmu" >
-            <property name="text" >
-             <string>Vinyl emulation</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButtonPitchIndp" >
-            <property name="text" >
-             <string>Pitch independent time stretch</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <layout class="QVBoxLayout" >
-          <item>
-           <widget class="QLabel" name="textLabelSoundScaling" >
-            <property name="text" >
-             <string>Stretching beyond +-10% with pitch independent time stretch is not advised, and is likely to result in bad sound quality.</string>
-            </property>
-            <property name="alignment" >
-             <set>Qt::AlignTop</set>
-            </property>
-            <property name="wordWrap" >
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" >
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="Q3GroupBox" name="GroupBox1" >
-       <property name="enabled" >
+      <widget class="Q3GroupBox" name="GroupBox1">
+       <property name="enabled">
         <bool>true</bool>
        </property>
-       <property name="font" >
+       <property name="font">
         <font/>
        </property>
-       <property name="title" >
+       <property name="title">
         <string>Latency</string>
        </property>
-       <layout class="QVBoxLayout" >
+       <layout class="QVBoxLayout">
         <item>
-         <layout class="QHBoxLayout" >
+         <layout class="QHBoxLayout">
           <item>
            <spacer>
-            <property name="orientation" >
+            <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
-            <property name="sizeHint" stdset="0" >
+            <property name="sizeHint" stdset="0">
              <size>
               <width>40</width>
               <height>20</height>
@@ -274,17 +227,17 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="TextLabelLatency" >
-            <property name="font" >
+           <widget class="QLabel" name="TextLabelLatency">
+            <property name="font">
              <font/>
             </property>
-            <property name="text" >
+            <property name="text">
              <string>256 ms</string>
             </property>
-            <property name="alignment" >
+            <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
-            <property name="wordWrap" >
+            <property name="wordWrap">
              <bool>false</bool>
             </property>
            </widget>
@@ -292,51 +245,51 @@
          </layout>
         </item>
         <item>
-         <widget class="QSlider" name="SliderLatency" >
-          <property name="minimum" >
+         <widget class="QSlider" name="SliderLatency">
+          <property name="minimum">
            <number>6</number>
           </property>
-          <property name="maximum" >
+          <property name="maximum">
            <number>13</number>
           </property>
-          <property name="singleStep" >
+          <property name="singleStep">
            <number>1</number>
           </property>
-          <property name="pageStep" >
+          <property name="pageStep">
            <number>1</number>
           </property>
-          <property name="value" >
+          <property name="value">
            <number>13</number>
           </property>
-          <property name="orientation" >
+          <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="tickInterval" >
+          <property name="tickInterval">
            <number>5</number>
           </property>
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" >
+         <layout class="QHBoxLayout">
           <item>
-           <widget class="QLabel" name="TextLabel8" >
-            <property name="font" >
+           <widget class="QLabel" name="TextLabel8">
+            <property name="font">
              <font/>
             </property>
-            <property name="text" >
+            <property name="text">
              <string>Low</string>
             </property>
-            <property name="wordWrap" >
+            <property name="wordWrap">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item>
            <spacer>
-            <property name="orientation" >
+            <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
-            <property name="sizeHint" stdset="0" >
+            <property name="sizeHint" stdset="0">
              <size>
               <width>40</width>
               <height>20</height>
@@ -345,14 +298,14 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="TextLabel8_2" >
-            <property name="font" >
+           <widget class="QLabel" name="TextLabel8_2">
+            <property name="font">
              <font/>
             </property>
-            <property name="text" >
+            <property name="text">
              <string>High</string>
             </property>
-            <property name="wordWrap" >
+            <property name="wordWrap">
              <bool>false</bool>
             </property>
            </widget>
@@ -360,26 +313,26 @@
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" >
+         <layout class="QHBoxLayout">
           <item>
-           <widget class="QLabel" name="TextLabel1_4_3_2" >
-            <property name="font" >
+           <widget class="QLabel" name="TextLabel1_4_3_2">
+            <property name="font">
              <font/>
             </property>
-            <property name="text" >
+            <property name="text">
              <string>Fast CPU</string>
             </property>
-            <property name="wordWrap" >
+            <property name="wordWrap">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item>
            <spacer>
-            <property name="orientation" >
+            <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
-            <property name="sizeHint" stdset="0" >
+            <property name="sizeHint" stdset="0">
              <size>
               <width>40</width>
               <height>20</height>
@@ -388,17 +341,17 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="TextLabelLatencyMaster_3_2" >
-            <property name="font" >
+           <widget class="QLabel" name="TextLabelLatencyMaster_3_2">
+            <property name="font">
              <font/>
             </property>
-            <property name="text" >
+            <property name="text">
              <string>Slow CPU</string>
             </property>
-            <property name="alignment" >
+            <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
-            <property name="wordWrap" >
+            <property name="wordWrap">
              <bool>false</bool>
             </property>
            </widget>
@@ -409,14 +362,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="textLabelSoundScaling_2" >
-       <property name="text" >
-        <string>Tips:&lt;ul>&lt;li>Increase your latency if you hear pops during playback&lt;/li>&lt;li>Reduce your latency to improve Mixxx's responsiveness&lt;/li>&lt;/ul></string>
+      <widget class="QLabel" name="textLabelSoundScaling_2">
+       <property name="text">
+        <string>Tips:&lt;ul&gt;&lt;li&gt;Increase your latency if you hear pops during playback&lt;/li&gt;&lt;li&gt;Reduce your latency to improve Mixxx's responsiveness&lt;/li&gt;&lt;/ul&gt;</string>
        </property>
-       <property name="alignment" >
+       <property name="alignment">
         <set>Qt::AlignTop</set>
        </property>
-       <property name="wordWrap" >
+       <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
@@ -425,10 +378,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
@@ -438,7 +391,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
   <customwidget>
@@ -455,8 +408,6 @@
   <tabstop>ComboBoxChannelHeadphones</tabstop>
   <tabstop>ComboBoxSamplerates</tabstop>
   <tabstop>ComboBoxSoundApi</tabstop>
-  <tabstop>radioButtonVinylEmu</tabstop>
-  <tabstop>radioButtonPitchIndp</tabstop>
   <tabstop>SliderLatency</tabstop>
  </tabstops>
  <resources/>
