--- a/mixxx/src/dlgprefplaylistdlg.ui
+++ b/mixxx/src/dlgprefplaylistdlg.ui
@@ -1,66 +1,65 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>DlgPrefPlaylistDlg</class>
- <widget class="QWidget" name="DlgPrefPlaylistDlg">
-  <property name="geometry">
+ <widget class="QWidget" name="DlgPrefPlaylistDlg" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>452</width>
-    <height>207</height>
+    <width>512</width>
+    <height>442</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form3</string>
   </property>
-  <layout class="QVBoxLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" >
    <item>
-    <widget class="QGroupBox" name="groupBoxLibrary">
-     <property name="title">
+    <widget class="QGroupBox" name="groupBoxLibrary" >
+     <property name="title" >
       <string>Library</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="TextLabel3_2">
-        <property name="enabled">
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="0" >
+       <widget class="QLabel" name="TextLabel3_2" >
+        <property name="enabled" >
          <bool>true</bool>
         </property>
-        <property name="minimumSize">
+        <property name="minimumSize" >
          <size>
           <width>100</width>
           <height>10</height>
          </size>
         </property>
-        <property name="font">
+        <property name="font" >
          <font/>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>Music Directory:</string>
         </property>
-        <property name="wordWrap">
+        <property name="wordWrap" >
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="LineEditSongfiles">
-        <property name="minimumSize">
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="LineEditSongfiles" >
+        <property name="minimumSize" >
          <size>
           <width>100</width>
           <height>10</height>
          </size>
         </property>
-        <property name="font">
+        <property name="font" >
          <font/>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="PushButtonBrowsePlaylist">
-        <property name="font">
+      <item row="0" column="2" >
+       <widget class="QPushButton" name="PushButtonBrowsePlaylist" >
+        <property name="font" >
          <font/>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>Browse...</string>
         </property>
        </widget>
@@ -69,57 +68,44 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
       <string>Audio Playback Plugins</string>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
+     <layout class="QGridLayout" name="gridLayout_2" >
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
          <string>Extra Playback Plugins:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
          <string>MP3, Ogg Vorbis, FLAC, Wave, Aiff Playback:</string>
         </property>
-        <property name="wordWrap">
+        <property name="wordWrap" >
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton">
-        <property name="enabled">
+      <item row="0" column="1" >
+       <widget class="QPushButton" name="pushButton" >
+        <property name="enabled" >
          <bool>false</bool>
         </property>
-        <property name="text">
+        <property name="text" >
          <string>Built-in</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="pushButtonExtraPlugins">
-        <property name="text">
+      <item row="1" column="1" >
+       <widget class="QPushButton" name="pushButtonExtraPlugins" >
+        <property name="text" >
          <string>Available Online...</string>
         </property>
        </widget>
@@ -128,75 +114,111 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBoxiPod">
-     <property name="visible">
-      <bool>false</bool>
+    <widget class="QGroupBox" name="groupBoxBundledSongs" >
+     <property name="title" >
+      <string>Bundled Songs</string>
      </property>
-     <property name="title">
-      <string>iPod</string>
-     </property>
-     <layout class="QGridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="TextLabel3_3">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>10</height>
-         </size>
-        </property>
-        <property name="font">
-         <font/>
-        </property>
-        <property name="text">
-         <string>iPod mountpoint</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="LineEditiPodMountPoint">
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>10</height>
-         </size>
-        </property>
-        <property name="font">
-         <font/>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="PushButtonBrowseiPodMountPoint">
-        <property name="font">
-         <font/>
-        </property>
-        <property name="text">
-         <string>Browse...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
-       <widget class="QPushButton" name="PushButtonDetectiPodMountPoint">
-        <property name="font">
-         <font/>
-        </property>
-        <property name="text">
-         <string>Detect</string>
+     <layout class="QGridLayout" name="gridLayout_3" >
+      <item row="0" column="0" >
+       <widget class="QCheckBox" name="checkBoxPromoStats" >
+        <property name="text" >
+         <string>Support Mixxx by counting and sharing bundled songs
+playback and outbound link statistics</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
+   <item>
+    <spacer name="verticalSpacer" >
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
+  <widget class="QGroupBox" name="groupBoxiPod" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>100</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="visible" >
+    <bool>false</bool>
+   </property>
+   <property name="title" >
+    <string>iPod</string>
+   </property>
+   <layout class="QGridLayout" >
+    <item row="0" column="0" >
+     <widget class="QLabel" name="TextLabel3_3" >
+      <property name="enabled" >
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize" >
+       <size>
+        <width>100</width>
+        <height>10</height>
+       </size>
+      </property>
+      <property name="font" >
+       <font/>
+      </property>
+      <property name="text" >
+       <string>iPod mountpoint</string>
+      </property>
+      <property name="wordWrap" >
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" >
+     <widget class="QLineEdit" name="LineEditiPodMountPoint" >
+      <property name="minimumSize" >
+       <size>
+        <width>100</width>
+        <height>10</height>
+       </size>
+      </property>
+      <property name="font" >
+       <font/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2" >
+     <widget class="QPushButton" name="PushButtonBrowseiPodMountPoint" >
+      <property name="font" >
+       <font/>
+      </property>
+      <property name="text" >
+       <string>Browse...</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3" >
+     <widget class="QPushButton" name="PushButtonDetectiPodMountPoint" >
+      <property name="font" >
+       <font/>
+      </property>
+      <property name="text" >
+       <string>Detect</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
+ <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections/>
